# cleanlab

./: DEVELOPMENT.md  pyproject.toml  requirements-dev-core.txt  requirements-dev-tensorflow-cpu.txt  requirements-dev-tensorflow.txt  requirements-dev-torch-cpu.txt  requirements-dev-torch.txt  requirements-dev.txt  setup.py
.github/workflows/: ci.yml  release-build-publish.yml
cleanlab/: outlier.py  version.py
cleanlab/datalab/: datalab.py
cleanlab/datalab/internal/issue_manager/: noniid.py
cleanlab/experimental/: keras.py
cleanlab/experimental/datalab/: datalab.py  factory.py  issue_manager.py
cleanlab/internal/neighbor/: neighbor.py
cleanlab/models/: keras.py
docs/source/tutorials/: faq.ipynb
tests/: test_frameworks.py
tests/datalab/: test_datalab.py
tests/datalab/issue_manager/: test_duplicate.py
tests/internal/neighbor/: test_neighbor.py
