[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_elisno"
version = "2.6.8"

[tool.black]
line-length = 100
exclude = '''
/(
   \.git
 | \.github
 | .*\.egg-info
 | build
 | dist
 | docs
 )/
'''

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:.*The least populated class in y has only 1 members,*"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
